--- a/options.html
+++ b/options.html
@@ -7,12 +7,12 @@
   <style>
     :root {
       color-scheme: light;
-      --bg: #f6f8fc;
+      --bg: #f5fbf7;
       --panel: #ffffff;
-      --text: #1f2937;
+      --text: #18252f;
       --muted: #6b7280;
-      --border: #d1d5db;
-      --accent: #0f766e;
+      --border: #cfe8d7;
+      --accent: #1DB954;
       --danger: #b91c1c;
     }
 
@@ -23,7 +23,7 @@
     body {
       margin: 0;
       padding: 24px;
-      background: radial-gradient(circle at top right, #e6fffb 0%, var(--bg) 45%);
+      background: radial-gradient(circle at top right, #dbfbe8 0%, var(--bg) 45%);
       color: var(--text);
       font-family: "Segoe UI", Tahoma, sans-serif;
     }
@@ -124,9 +124,70 @@
     }
 
     .metrics {
-      margin: 0 0 12px;
-      font-size: 14px;
+      margin: 0 0 16px;
+      padding: 18px;
+      border-radius: 14px;
+      border: 1px solid #b4edc7;
+      background: linear-gradient(135deg, #eefff4 0%, #f6fff9 100%);
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8);
+    }
+
+    .metrics-grid {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 10px;
+      margin-bottom: 14px;
+    }
+
+    .metric-card {
+      background: rgba(255, 255, 255, 0.7);
+      border: 1px solid #d8f7e2;
+      border-radius: 12px;
+      padding: 12px;
+    }
+
+    .metrics-label {
+      margin: 0;
+      color: #169245;
+      font-size: 12px;
+      font-weight: 700;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+    }
+
+    .metrics-value {
+      margin: 6px 0 0;
       color: #0f172a;
+      font-size: 34px;
+      line-height: 1;
+      font-weight: 800;
+    }
+
+    .metrics-caption {
+      margin: 8px 0 0;
+      color: #334155;
+      font-size: 13px;
+    }
+
+    .rate-row {
+      display: grid;
+      grid-template-columns: 180px minmax(0, 240px);
+      gap: 10px;
+      align-items: end;
+      margin-top: 6px;
+    }
+
+    .rate-help {
+      margin: 8px 0 0;
+      color: #475569;
+      font-size: 12px;
+    }
+
+    .rate-error {
+      color: var(--danger);
+      font-size: 12px;
+      min-height: 16px;
+      margin-top: 4px;
     }
 
     .message.error {
@@ -179,6 +240,46 @@
       min-height: 16px;
     }
 
+    .rule-enabled {
+      appearance: none;
+      -webkit-appearance: none;
+      width: 44px;
+      height: 24px;
+      border-radius: 999px;
+      background: #d1d5db;
+      border: 1px solid #cbd5e1;
+      position: relative;
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+
+    .rule-enabled::before {
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      width: 18px;
+      height: 18px;
+      border-radius: 999px;
+      background: #ffffff;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.18);
+      transition: transform 0.2s ease;
+    }
+
+    .rule-enabled:checked {
+      background: var(--accent);
+      border-color: #18a84a;
+    }
+
+    .rule-enabled:checked::before {
+      transform: translateX(20px);
+    }
+
+    .rule-enabled:focus-visible {
+      outline: 2px solid rgba(29, 185, 84, 0.35);
+      outline-offset: 2px;
+    }
+
     .enabled-cell {
       width: 80px;
     }
@@ -191,6 +292,14 @@
 
     @media (max-width: 820px) {
       .add-form {
+        grid-template-columns: 1fr;
+      }
+
+      .metrics-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .rate-row {
         grid-template-columns: 1fr;
       }
 
@@ -240,7 +349,30 @@
       </form>
 
       <div id="formMessage" class="message" aria-live="polite"></div>
-      <div id="metricsSummary" class="metrics" aria-live="polite">Total redirects: 0</div>
+      <div class="metrics" aria-live="polite">
+        <div class="metrics-grid">
+          <div class="metric-card">
+            <p class="metrics-label">Redirects Prevented</p>
+            <p id="metricsSummary" class="metrics-value">0</p>
+          </div>
+          <div class="metric-card">
+            <p class="metrics-label">Time Saved</p>
+            <p id="timeSavedSummary" class="metrics-value">0.0h</p>
+          </div>
+          <div class="metric-card">
+            <p class="metrics-label">Money Saved</p>
+            <p id="moneySavedSummary" class="metrics-value">$0.00</p>
+          </div>
+        </div>
+        <div class="rate-row">
+          <div class="field">
+            <label for="hourlyRateInput">Hourly rate ($/hour)</label>
+            <input id="hourlyRateInput" type="number" min="0" step="0.01" placeholder="75.00" />
+            <div id="hourlyRateError" class="rate-error" aria-live="polite"></div>
+          </div>
+        </div>
+        <p class="metrics-caption">Time saved uses 17.5 minutes per prevented distraction (range: 10-25). Money saved is calculated per minute from your hourly rate.</p>
+      </div>
 
       <table aria-label="Redirect Rules">
         <thead>
